# gcp-pulumi-nix-demo

./: .gitignore  Justfile  README.md  api_image.nix  container.nix  flake.nix
angularcli/: package-lock.json  package.json
app/: Cargo.toml
app/src/: adjudicate.rs  cache.rs  logs.rs  main.rs  vecembed.rs
app/src/cache/: mod.rs  resp3.rs
frontend/: angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  types.ts
frontend/src/app/: app.css  app.html  app.ts
infra/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
