[package]
name = "app"
version = "0.0.1"
edition = "2024"
description = "A learning experiment exploring modern backend, infrastructure, and API patterns with Rust and cloud-native tools. Focused on hands-on experimentation and knowledge sharing."

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
threatflux-vertex-rust-sdk = "0.5.0"
tokio = { version = "1.52.3", features=["macros", "net", "time", "rt-multi-thread"]}
tower = "0.5.3"
