[package]
name = "app"
version = "0.0.1"
edition = "2024"
description = "A learning experiment exploring modern backend, infrastructure, and API patterns with Rust and cloud-native tools. Focused on hands-on experimentation and knowledge sharing."

[dependencies]
anyhow = "1.0.103"
axum =  { version = "0.8.9", features=["macros"] }
axum-anyhow = "0.11.5"
serde = {"version" = "1.0.228", features=["derive"] }
serde_json = "1.0.150"
threatflux-vertex-rust-sdk = "0.5.0"
tokio = { version = "1.52.3", features=["macros", "net", "time", "rt-multi-thread"]}
tower = "0.5.3"
tracing = "0.1.44"
tracing-opentelemetry = "0.33.0"
tracing-stackdriver = "0.10.0"
tracing-subscriber = { version = "0.3.23", features=["registry"] }
